# python-path-chapitre0

./: .coverage  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
.github/: ci.yml
.github/workflows/: ci.yml
src/: __init__.py  exceptions.py  models.py  register.py
tests/: __init__.py  test_register.py
