[project]
name = "cash-register"
version = "0.1.0"
description = "A cash register application"
authors = [
    {name = "Hasna"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.17.0"
pytest-cov = "^6.2.1"

[tool.mypy]
disallow_untyped_defs = true
python_version = "3.13"

[tool.flake8]
max-line-length = 88

